--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,84 @@
 @import url('https://fonts.googleapis.com/css2?family=Gajraj+One&display=swap');
+/*font-family: 'Gajraj One', cursive;*/
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
-p{font-family: 'Gajraj One', cursive;
-    font-size: 50px;
+/*font-family: 'Anton', sans-serif;*/
+.bodys{
+    margin: 0px;
+    background: black;
+}
+.title{
+    width:100%;
+    height: 92.5px;
+    background: black;
+    position: fixed;
+    z-index: 99;
+}
+.title_block1{
+    font-family: 'Gajraj One', cursive;
+    font-size: 60px;
+    padding-left: 29.3px;
+    padding-right: 29.3px;
+    padding-bottom: 0px;
     color: maroon;
-    
-}
-.p1{font-family: 'Anton', sans-serif;
-    color: white;
-    font-size: 27px;
-    margin-left: 65px;
-    margin-top: 0px;
-    margin-bottom: 5px;
-    display: inline-block;    
-}
-.p2{font-family: 'Anton', sans-serif;
-    color: white;
-    font-size: 27px;
-    padding-left: 0px;
-    margin-top: 20px;
-    display: inline-block;
-    vertical-align: 280px;
-}
-.p3{font-family: 'Anton', sans-serif;
-    color: white;
-    font-size: 27px;
-    margin-top: 20px;
-    
+    position: absolute;
+    z-index: 100;
+   border-right: 5px solid maroon;
    
 }
+.title_block2{
+    font-family: 'Gajraj One', cursive;
+    font-size: 40px;
+    padding-top: 13.75px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 13.75px;
+    color: maroon;
+    position: absolute;
+    z-index: 100;
+    border-right: 5px solid maroon;
+    position: absolute;
+    left: 370px;
+}
+.title_block3{
+    font-family: 'Gajraj One', cursive;
+    font-size: 40px;
+    padding-top: 13.75px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 13.75px;
+    color: maroon;
+    position: absolute;
+    z-index: 100;
+    border-right: 5px solid maroon;
+    position: absolute;
+    left: 605.8px;
+}
 .line1{
-    height: auto; width: 100%; background-color: maroon;}
-/* daaaaaa
+    height: 460px; 
+    width: 100%;
+    background-color: maroon;
+    position: relative;
+    top: 92.5px;
+}
+.line_img{
+    position: absolute;
+    top: 20px;
+}
+.font_inf_white{
+    font-family: 'Anton', sans-serif;
+    font-size: 35px;
+    color: lightgray;
+    position: absolute;
+    left: 390px;
+    top: 20px;
+}
+.span_font_inf_white{
+    font-family: 'Anton', sans-serif;
+    font-size: 35px;
+    color: white;
+}
+.link{
+    color: maroon;
+    text-decoration: none;
+}
+
