--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,16 @@
 }
 .title{
     width:100%;
-    height: 92.5px;
+    height: 63px;
     background: black;
     position: fixed;
     z-index: 99;
 }
 .title_block1{
     font-family: 'Gajraj One', cursive;
-    font-size: 60px;
-    padding-left: 29.3px;
-    padding-right: 29.3px;
+    font-size: 40px;
+    padding-left: 55.35px;
+    padding-right: 55.35px;
     padding-bottom: 0px;
     color: maroon;
     position: absolute;
@@ -27,38 +27,52 @@
 }
 .title_block2{
     font-family: 'Gajraj One', cursive;
-    font-size: 40px;
-    padding-top: 13.75px;
+    font-size: 27px;
+    padding-top: 9.5px;
     padding-left: 10px;
     padding-right: 10px;
-    padding-bottom: 13.75px;
+    padding-bottom: 9.5px;
     color: maroon;
     position: absolute;
     z-index: 100;
     border-right: 5px solid maroon;
     position: absolute;
-    left: 370px;
+    left: 320px;
 }
 .title_block3{
     font-family: 'Gajraj One', cursive;
-    font-size: 40px;
-    padding-top: 13.75px;
+    font-size: 27px;
+    padding-top: 9.5px;
     padding-left: 10px;
     padding-right: 10px;
-    padding-bottom: 13.75px;
+    padding-bottom: 9.5px;
     color: maroon;
     position: absolute;
     z-index: 100;
     border-right: 5px solid maroon;
     position: absolute;
-    left: 605.8px;
+    left: 487px;
+}
+.title_block4{
+    font-family: 'Gajraj One', cursive;
+    font-size: 27px;
+    padding-top: 9.5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 9.5px;
+    color: maroon;
+    position: absolute;
+    z-index: 100;
+    border-right: 5px solid maroon;
+    position: absolute;
+    left: 645px;
 }
 .line1{
-    height: 460px; 
+    height: 400px; 
     width: 100%;
     background-color: maroon;
     position: relative;
-    top: 92.5px;
+    top: 63px;
 }
 .line_img{
     position: absolute;
@@ -66,10 +80,10 @@
 }
 .font_inf_white{
     font-family: 'Anton', sans-serif;
-    font-size: 35px;
+    font-size: 28px;
     color: lightgray;
     position: absolute;
-    left: 390px;
+    left: 340px;
     top: 20px;
 }
 .span_font_inf_white{
@@ -81,4 +95,7 @@
     color: maroon;
     text-decoration: none;
 }
-
+.paragraph{
+    margin: 0px;
+    text-indent: 24px;
+}
