--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,11 @@
 }
 .title{
     width:100%;
-    height: 63px;
+    height: 59px;
     background: black;
     position: fixed;
     z-index: 99;
+    margin: 0px;
 }
 .title_block1{
     font-family: 'Gajraj One', cursive;
@@ -25,7 +26,9 @@
     position: absolute;
     z-index: 100;
    border-right: 5px solid maroon;
-   
+    list-style-type: none;
+    position: absolute;
+    left: 0px;
 }
 .title_block2{
     font-family: 'Gajraj One', cursive;
@@ -40,6 +43,7 @@
     border-right: 5px solid maroon;
     position: absolute;
     left: 320px;
+    list-style-type: none;
 }
 .title_block3{
     font-family: 'Gajraj One', cursive;
@@ -54,6 +58,7 @@
     border-right: 5px solid maroon;
     position: absolute;
     left: 487px;
+    list-style-type: none;
 }
 .title_block4{
     font-family: 'Gajraj One', cursive;
@@ -68,20 +73,21 @@
     border-right: 5px solid maroon;
     position: absolute;
     left: 645px;
+    list-style-type: none;
 }
 .line1{
     height: 360px; 
     width: 100%;
     background-color: maroon;
     position: relative;
-    top: 63px;
+    top: 59px;
 }
 .line2{
     height: 1000px; 
     width: 100%;
     background-color: black;
     position: relative;
-    top: 63px;
+    top: 59px;
 }
 .line_img{
     position: absolute;
@@ -124,7 +130,7 @@
     font-size: 35px;
     color: white;
 }
-.link{
+a{
     color: maroon;
     text-decoration: none;
 }
@@ -146,3 +152,26 @@
     right: 69px;
     border: 10px solid maroon;
 }
+nav ul ul{
+    display: none;
+    position: absolute;
+    top:100%;
+}
+nav ul li:hover > ul {
+    display: inherit;
+    background: black;
+    padding-right: 20%;
+    list-style-type: none ;
+    border:  2px solid maroon;
+    position: absolute;
+    left: 0%;
+}
+nav ul ul li:not(:last-of-type){
+    min-width: 170px;
+    float: none;
+    display: list-item;
+    position: relative;
+    list-style-type:circle;
+    border-bottom:  2px solid maroon;
+}
+
