--- a/.vscode/styles.css
+++ b/.vscode/styles.css
@@ -343,6 +343,19 @@ nav ul ul li:last-child{
     align-items: center;
     position: absolute;
     left: 300px;
-    top: 150px;
+    top: 170px;
+
+};
+.HUILO{
+    font-family: 'Gajraj One', cursive;
+    font-size: 20px;
+    height: 158px;
+    width: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 300px;
+    top: 200px;
 
 };
